tests/lean/elab11.lean.expected.out
elab11.lean:6:6: error: ambiguous overload, possible interpretations
  bla.f 1
  boo.f 1
