tests/lean/elab11.lean
constant boo.f : nat → bool
constant bla.f : nat → nat

open boo bla

#elab f 1
